examples/test/testpolicy12475.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12475
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key37: value42
      key30: value12
      key42: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value3
          key20: value31
          key44: value48
      podSelector:
        matchLabels:
          key12: value20
          key35: value12
          key46: value11
